--- a/src/patternfly/components/Table/table-nested.hbs
+++ b/src/patternfly/components/Table/table-nested.hbs
@@ -4,7 +4,7 @@
       {{#> table-th table-th--attribute='scope="col"' table-th--IsSortable=true}}Description{{/table-th}}
       {{#> table-th table-th--attribute='scope="col"'}}Date{{/table-th}}
       {{#> table-th table-th--attribute='scope="col"'}}Status{{/table-th}}
-      {{> table-cell-empty}}
+      {{> table-cell-empty table-cell--IsPrimaryAction=true}}
     {{/table-tr}}
   {{/table-thead}}
   {{#> table-tbody}}
