--- a/src/patternfly/components/Table/templates/table--scrollable--td.hbs
+++ b/src/patternfly/components/Table/templates/table--scrollable--td.hbs
@@ -1,4 +1,4 @@
-{{#> table-td table-td--data-label="Example td"}}
+{{#> table-td table-td--data-label='Example td'}}
   {{#if table--scrollable--td--content}}
     {{{table--scrollable--td--content}}}
   {{else if @partial-block}}
