--- a/src/patternfly/demos/Card/templates/card-demo--popover-table.hbs
+++ b/src/patternfly/demos/Card/templates/card-demo--popover-table.hbs
@@ -1,7 +1,7 @@
 {{#> table table--id=(concat card--id '-popover-table') table--modifier="pf-m-compact" table--IsExpandable=true table--attribute='aria-label="Control panel table"'}}
   {{#> table-thead}}
     {{#> table-tr}}
-      {{> table-cell-empty}}
+      {{> table-cell-empty table-cell--IsToggle=true}}
       {{#> table-th table-th--attribute='scope="col"'}}
         Components
       {{/table-th}}
