--- a/src/patternfly/demos/Skeleton/table-skeleton.hbs
+++ b/src/patternfly/demos/Skeleton/table-skeleton.hbs
@@ -21,8 +21,8 @@
       {{#> table-th table-th--attribute='scope="col"'}}
         Last commit
       {{/table-th}}
-      {{> table-cell-empty}}
-      {{> table-cell-empty}}
+      {{> table-cell-empty table-cell--IsUrl=true}}
+      {{> table-cell-empty table-cell--IsPrimaryAction=true}}
     {{/table-tr}}
   {{/table-thead}}
   {{#> table-tbody}}
