--- a/src/patternfly/components/Table/TableCells/table-cell-check.hbs
+++ b/src/patternfly/components/Table/TableCells/table-cell-check.hbs
@@ -2,10 +2,10 @@
 {{!-- TODO: automate `td/th` based up `IsThead/IsTbody` and make overridable --}}
 {{!-- TODO: automate attribution --}}
 
-{{#> table-td table-td--IsCheckbox=true}}
+{{#> table-cell table-cell--IsCheckbox=true}}
   {{> check
       check--IsStandalone=true
       check--IsLabelWrapped=true
       check--id=(ternary table-cell-check--id table-cell-check--id (dasherize table--id 'checkrow' table-tr--index 'check'))
     }}
-{{/table-td}}
+{{/table-cell}}
