--- a/src/patternfly/components/Table/templates/table--scrollable--tbody--tr.hbs
+++ b/src/patternfly/components/Table/templates/table--scrollable--tbody--tr.hbs
@@ -4,16 +4,20 @@
         table--scrollable--th--modifier=table--scrollable--th--modifier--cell-1-modifier
         table--scrollable--th--content=cell-1--content
         table-th--IsStickyLeft=true
-        table-th--attribute='style="--pf-v6-c-table__sticky-cell--MinWidth: 100px;"'}}
+        table-th--min-width='110px'
+    }}
   {{else}}
     {{> table--scrollable--td table--scrollable--td--content=cell-1--content}}
   {{/if}}
+  {{!-- TODO: simplify this --}}
   {{#if table--scrollable--Column2IsStickyColumn}}
     {{> table--scrollable--th
         table--scrollable--th--modifier=table--scrollable--th--modifier--cell-2-modifier
         table--scrollable--th--content=cell-2--content
         table-th--IsStickyLeft=true
-        table-th--attribute='style="--pf-v6-c-table__sticky-cell--MinWidth: 80px; --pf-v6-c-table__sticky-cell--Left: 100px;"'}}
+        table-th--min-width='80px'
+        table-th--style=(inlineStyle (pfVar 'table__sticky-cell--Left') '110px')
+    }}
   {{else}}
     {{> table--scrollable--td table--scrollable--td--content=cell-2--content}}
   {{/if}}
@@ -28,8 +32,9 @@
     {{> table--scrollable--th
         table--scrollable--th--modifier=table--scrollable--th--modifier--cell-9-modifier
         table--scrollable--th--content=cell-9--content
-        table-th--attribute='scope="col" style="--pf-v6-c-table__sticky-cell--MinWidth: 150px;"'
-        table-th--IsStickyRight=true}}
+        table-th--IsStickyRight=true
+        table-th--min-width='150px'
+    }}
   {{else}}
     {{> table--scrollable--td table--scrollable--td--content=cell-9--content table--scrollable--td--icon=cell-9--icon}}
   {{/if}}
