--- a/src/patternfly/demos/Tabs/tabs--table.hbs
+++ b/src/patternfly/demos/Tabs/tabs--table.hbs
@@ -17,7 +17,7 @@
       {{#> table-th table-th--attribute='scope="col"'}}
         Last commit
       {{/table-th}}
-      {{> table-cell-empty}}
+      {{> table-cell-empty table-cell--IsPrimaryAction=true}}
     {{/table-tr}}
   {{/table-thead}}
 
