--- a/src/patternfly/components/TextInputGroup/text-input-group.scss
+++ b/src/patternfly/components/TextInputGroup/text-input-group.scss
@@ -1,67 +1,73 @@
 // @debug $text-input-group; // check your variable names located in src/patternfly/sass-utilities/component-namespaces.scss
+:where(:root),
+:where(.#{$text-input-group}) {
+  --#{$text-input-group}--BackgroundColor: var(--pf-t--global--background--color--control--default);
+  --#{$text-input-group}--BorderColor: var(--pf-t--global--border--color--default);
+  --#{$text-input-group}--BorderWidth: var(--pf-t--global--border--width--control--default);
+  --#{$text-input-group}--BorderRadius: var(--pf-t--global--border--radius--small);
 
-.#{$text-input-group} {
-  --#{$text-input-group}--BackgroundColor: var(--#{$pf-global}--BackgroundColor--100);
-
-  // Base border
-  --#{$text-input-group}__text--before--BorderWidth: var(--#{$pf-global}--BorderWidth--sm);
-  --#{$text-input-group}__text--before--BorderColor: var(--#{$pf-global}--BorderColor--300);
-
-  // Bottom border
-  --#{$text-input-group}__text--after--BorderBottomWidth: var(--#{$pf-global}--BorderWidth--sm);
-  --#{$text-input-group}__text--after--BorderBottomColor: var(--#{$pf-global}--BorderColor--200);
-  --#{$text-input-group}--hover__text--after--BorderBottomColor: var(--#{$pf-global}--primary-color--100);
-  --#{$text-input-group}__text--focus-within--after--BorderBottomWidth: var(--#{$pf-global}--BorderWidth--md);
-  --#{$text-input-group}__text--focus-within--after--BorderBottomColor: var(--#{$pf-global}--primary-color--100);
+  // Border hover
+  --#{$text-input-group}--m-hover--BorderColor: var(--pf-t--global--border--color--hover);
 
   // Main
-  --#{$text-input-group}__main--first-child--not--text-input--MarginLeft: var(--#{$pf-global}--spacer--sm);
-  --#{$text-input-group}__main--m-icon__text-input--PaddingLeft: var(--#{$pf-global}--spacer--xl);
-  --#{$text-input-group}__main--RowGap: var(--#{$pf-global}--spacer--xs);
-  --#{$text-input-group}__main--ColumnGap: var(--#{$pf-global}--spacer--sm);
+  --#{$text-input-group}__main--first-child--not--text-input--MarginLeft: var(--pf-t--global--spacer--xs);
+  --#{$text-input-group}__main--m-icon__text-input--PaddingLeft: var(--pf-t--global--spacer--xl);
+  --#{$text-input-group}__main--RowGap: var(--pf-t--global--spacer--xs);
+  --#{$text-input-group}__main--ColumnGap: var(--pf-t--global--spacer--xs);
 
   // Chip group
-  --#{$text-input-group}--c-chip-group__main--PaddingTop: var(--#{$pf-global}--spacer--xs);
-  --#{$text-input-group}--c-chip-group__main--PaddingRight: var(--#{$pf-global}--spacer--xs);
-  --#{$text-input-group}--c-chip-group__main--PaddingBottom: var(--#{$pf-global}--spacer--xs);
+  --#{$text-input-group}--c-chip-group__main--PaddingTop: var(--pf-t--global--spacer--xs);
+  --#{$text-input-group}--c-chip-group__main--PaddingRight: var(--pf-t--global--spacer--xs);
+  --#{$text-input-group}--c-chip-group__main--PaddingBottom: var(--pf-t--global--spacer--xs);
 
   // Text input
-  --#{$text-input-group}__text-input--PaddingTop: var(--#{$pf-global}--spacer--form-element);
-  --#{$text-input-group}__text-input--PaddingRight: var(--#{$pf-global}--spacer--sm);
-  --#{$text-input-group}__text-input--PaddingBottom: var(--#{$pf-global}--spacer--form-element);
-  --#{$text-input-group}__text-input--PaddingLeft: var(--#{$pf-global}--spacer--sm);
+  --#{$text-input-group}__text-input--PaddingTop: var(--pf-t--global--spacer--sm);
+  --#{$text-input-group}__text-input--PaddingRight: var(--pf-t--global--spacer--sm);
+  --#{$text-input-group}__text-input--PaddingBottom: var(--pf-t--global--spacer--sm);
+  --#{$text-input-group}__text-input--PaddingLeft: var(--pf-t--global--spacer--sm);
   --#{$text-input-group}__text-input--MinWidth: 12ch;
-  --#{$text-input-group}__text-input--m-hint--Color: var(--#{$pf-global}--Color--200); // matches placeholder text color
-  --#{$text-input-group}__text-input--placeholder--Color: var(--#{$pf-global}--Color--200);
+  --#{$text-input-group}__text-input--m-hint--Color: var(--pf-t--global--text--color--placeholder);
+  --#{$text-input-group}__text-input--placeholder--Color: var(--pf-t--global--text--color--placeholder);
   --#{$text-input-group}__text-input--BackgroundColor: transparent;
+  --#{$text-input-group}__text-input--OutlineOffset: -6px;
 
   // Icon
-  --#{$text-input-group}__icon--Left: var(--#{$pf-global}--spacer--sm);
-  --#{$text-input-group}__icon--Color: var(--#{$pf-global}--icon--Color--dark);
+  --#{$text-input-group}__icon--Left: var(--pf-t--global--spacer--sm);
+  --#{$text-input-group}__icon--Color: var(--pf-t--global--icon--color--regular);
   --#{$text-input-group}__icon--TranslateY: -50%;
 
   // Utilities
-  --#{$text-input-group}__utilities--child--MarginLeft: var(--#{$pf-global}--spacer--xs);
-  --#{$text-input-group}__utilities--c-button--PaddingRight: var(--#{$pf-global}--spacer--xs);
-  --#{$text-input-group}__utilities--c-button--PaddingLeft: var(--#{$pf-global}--spacer--xs);
+  --#{$text-input-group}__utilities--child--MarginLeft: var(--pf-t--global--spacer--xs);
+  --#{$text-input-group}__utilities--c-button--PaddingRight: var(--pf-t--global--spacer--xs);
+  --#{$text-input-group}__utilities--c-button--PaddingLeft: var(--pf-t--global--spacer--xs);
 
   // input disabled style
-  --#{$text-input-group}--m-disabled--Color: var(--#{$pf-global}--disabled-color--100);
-  --#{$text-input-group}--m-disabled--BackgroundColor: var(--#{$pf-global}--disabled-color--300);
+  --#{$text-input-group}--m-disabled--Color: var(--pf-t--global--text--color--on-disabled);
+  --#{$text-input-group}--m-disabled--BackgroundColor: var(--pf-t--global--background--color--disabled--default);
+}
 
+.#{$text-input-group} {
   position: relative;
   display: flex;
   width: 100%; // when child of flex layout, take up space
   color: var(--#{$text-input-group}--Color, inherit);
   background-color: var(--#{$text-input-group}--BackgroundColor);
+  border-radius: var(--#{$text-input-group}--BorderRadius);
+  
+  &::before {
+    position: absolute;
+    inset: 0;
+    pointer-events: none;
+    content: "";
+    border: var(--#{$text-input-group}--BorderWidth) solid var(--#{$text-input-group}--BorderColor);
+    border-radius: var(--#{$text-input-group}--BorderRadius);
+  }
 
   &:hover {
-    --#{$text-input-group}__text--after--BorderBottomColor: var(--#{$text-input-group}--hover__text--after--BorderBottomColor);
+    --#{$text-input-group}--BorderColor: var(--#{$text-input-group}--m-hover--BorderColor);
   }
 
   &.pf-m-disabled {
-    --#{$text-input-group}__text--before--BorderWidth: 0;
-    --#{$text-input-group}__text--after--BorderBottomWidth: 0;
     --#{$text-input-group}--Color: var(--#{$text-input-group}--m-disabled--Color);
     --#{$text-input-group}__icon--Color: var(--#{$text-input-group}--m-disabled--Color);
     --#{$text-input-group}--BackgroundColor: var(--#{$text-input-group}--m-disabled--BackgroundColor);
@@ -116,19 +122,6 @@
     pointer-events: none;
     content: "";
   }
-
-  &::before {
-    border: var(--#{$text-input-group}__text--before--BorderWidth) solid var(--#{$text-input-group}__text--before--BorderColor);
-  }
-
-  &::after {
-    border-block-end: var(--#{$text-input-group}__text--after--BorderBottomWidth) solid var(--#{$text-input-group}__text--after--BorderBottomColor);
-  }
-
-  &:focus-within {
-    --#{$text-input-group}__text--after--BorderBottomWidth: var(--#{$text-input-group}__text--focus-within--after--BorderBottomWidth);
-    --#{$text-input-group}__text--after--BorderBottomColor: var(--#{$text-input-group}__text--focus-within--after--BorderBottomColor);
-  }
 }
 
 .#{$text-input-group}__icon {
@@ -151,6 +144,7 @@
   padding-inline-end: var(--#{$text-input-group}__text-input--PaddingRight);
   background-color: var(--#{$text-input-group}__text-input--BackgroundColor);
   border: 0;
+  outline-offset: var(--#{$text-input-group}__text-input--OutlineOffset);
 
   &,
   &.pf-m-hint {
@@ -178,7 +172,7 @@
   }
 }
 
-
 .#{$text-input-group}__group {
   display: flex;
 }
+
