--- a/src/patternfly/components/Table/table-scrollable.scss
+++ b/src/patternfly/components/Table/table-scrollable.scss
@@ -14,44 +14,48 @@
   --#{$table}__sticky-cell--m-right--Right: 0;
   --#{$table}__sticky-cell--m-left--Left: 0;
   --#{$table}--m-sticky-header__sticky-cell--ZIndex: calc(var(--#{$table}__sticky-cell--ZIndex) + 1);
+}
 
-  // * Table sticky cell
-  .#{$table}__sticky-cell {
-    --#{$table}--cell--Overflow: visible;
-    --#{$table}--m-sticky-header--cell--ZIndex: var(--#{$table}--m-sticky-header__sticky-cell--ZIndex);
 
-    position: sticky;
-    inset-inline-start: var(--#{$table}__sticky-cell--Left);
-    inset-inline-end: var(--#{$table}__sticky-cell--Right);
-    z-index: var(--#{$table}__sticky-cell--ZIndex);
-    min-width: var(--#{$table}__sticky-cell--MinWidth);
-    background-color: var(--#{$table}__sticky-cell--BackgroundColor);
-    background-clip: padding-box;
+// - Table sticky cell
+.#{$table} .#{$table}__sticky-cell {
+  position: sticky;
+}
 
-    &.pf-m-border-right::before {
-      --#{$table}--cell--m-border-right--before--BorderRightWidth: var(--#{$table}__sticky-cell--m-border-right--before--BorderRightWidth);
-      --#{$table}--cell--m-border-right--before--BorderRightColor: var(--#{$table}__sticky-cell--m-border-right--before--BorderRightColor);
-    }
+.#{$table}__sticky-cell {
+  --#{$table}--cell--Overflow: visible;
+  --#{$table}--m-sticky-header--cell--ZIndex: var(--#{$table}--m-sticky-header__sticky-cell--ZIndex);
 
-    &.pf-m-border-left::before {
-      --#{$table}--cell--m-border-left--before--BorderLeftWidth: var(--#{$table}__sticky-cell--m-border-left--before--BorderLeftWidth);
-      --#{$table}--cell--m-border-left--before--BorderLeftColor: var(--#{$table}__sticky-cell--m-border-left--before--BorderLeftColor);
-    }
+  position: sticky;
+  inset-inline-start: var(--#{$table}__sticky-cell--Left);
+  inset-inline-end: var(--#{$table}__sticky-cell--Right);
+  z-index: var(--#{$table}__sticky-cell--ZIndex);
+  min-width: var(--#{$table}__sticky-cell--MinWidth);
+  background-color: var(--#{$table}__sticky-cell--BackgroundColor);
+  background-clip: padding-box;
 
-    &.pf-m-right,
-    &.pf-m-inline-end {
-      --#{$table}__sticky-cell--Right: var(--#{$table}__sticky-cell--m-right--Right);
-    }
+  &.pf-m-border-right::before {
+    --#{$table}--cell--m-border-right--before--BorderRightWidth: var(--#{$table}__sticky-cell--m-border-right--before--BorderRightWidth);
+    --#{$table}--cell--m-border-right--before--BorderRightColor: var(--#{$table}__sticky-cell--m-border-right--before--BorderRightColor);
+  }
 
-    &.pf-m-left,
-    &.pf-m-inline-start {
-      --#{$table}__sticky-cell--Left: var(--#{$table}__sticky-cell--m-left--Left);
-    }
+  &.pf-m-border-left::before {
+    --#{$table}--cell--m-border-left--before--BorderLeftWidth: var(--#{$table}__sticky-cell--m-border-left--before--BorderLeftWidth);
+    --#{$table}--cell--m-border-left--before--BorderLeftColor: var(--#{$table}__sticky-cell--m-border-left--before--BorderLeftColor);
+  }
 
+  &.pf-m-right,
+  &.pf-m-inline-end {
+    --#{$table}__sticky-cell--Right: var(--#{$table}__sticky-cell--m-right--Right);
+  }
+
+  &.pf-m-left,
+  &.pf-m-inline-start {
+    --#{$table}__sticky-cell--Left: var(--#{$table}__sticky-cell--m-left--Left);
   }
 }
 
-// * Scroll outer wrapper
+// - Scroll outer wrapper
 .#{$scroll-outer-wrapper} {
   --#{$scroll-outer-wrapper}--MinHeight: #{pf-size-prem(400px)};
   --#{$scroll-outer-wrapper}--MaxHeight: 100%;
@@ -64,7 +68,7 @@
   overflow: hidden;
 }
 
-// * Scroll inner wrapper
+// - Scroll inner wrapper
 .#{$scroll-inner-wrapper} {
   display: flex;
   flex-direction: column;
